--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-List.class
-Node.class
-TestList.class
-TestList.java
-TestBSE.java
-TreeNode.class
-.gitignore
-TestBSE.class
-BinarySearchTree.class
+*.class
